# predictive-maintenance-platform

./: .dockerignore  .gitignore  Makefile  README.md  RUNBOOK.md  detect_fragmentation.py  docker-compose.yml  pyproject.toml
alerts/: anomaly.py  engine.py
apps/api/: main.py  routes.py  schemas.py  scoring.py  synthetic.py
apps/api/static/: index.html
apps/worker/: runner.py
configs/: infra.yaml  model.yaml  pipeline.yaml  settings.py
data/: alerts.db  anomaly_thresholds.json
data/artifacts/: benchmark_results.json  failure_model.pkl  feature_columns.json  forecast_model.pkl  pipeline_output.json
docker/: Dockerfile.api  Dockerfile.worker  prometheus.yml
docker/grafana/dashboards/: predictive-maintenance.json
docs/: DEPLOY_GCP.md
features/: engineering.py  ingestion.py  validation.py
models/experimental/: patchtst_model.py
models/failure/: lgbm_failure.py
models/forecast/: lgbm_forecast.py
monitoring/: metrics.py
pipelines/: direct_runner.py  mlflow_logger.py
pipelines/flows/: training_flow.py
pipelines/tasks/: data_tasks.py  evaluation_tasks.py  training_tasks.py
scripts/: benchmark_h2o.py  run_flow.py  test_distribution.py
storage/: duckdb_store.py  minio_store.py  sqlite_store.py
tests/: conftest.py  test_alerts.py  test_api.py  test_engineering.py  test_features.py  test_models.py  test_pipeline.py  test_scoring.py  test_storage.py
