[project]
name = "predictive-maintenance-platform"
version = "1.1.0"
description = "End-to-end predictive maintenance platform for turbofan engine RUL forecasting, failure classification, and anomaly detection using NASA CMAPSS FD001 dataset"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = {text = "MIT"}
authors = [
    {name = "SherozShaikh", email = "shaikh.sheroz07@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
keywords = [
    "predictive-maintenance",
    "machine-learning",
    "remaining-useful-life",
    "turbofan",
    "cmapss",
    "lightgbm",
    "fastapi",
    "mlops",
    "anomaly-detection",
    "failure-prediction",
]
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.29,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "pandera>=0.19,<1",
    "pandas>=2.2,<3",
    "numpy>=1.26,<2",
    "duckdb>=0.10,<2",
    "minio>=7.2,<8",
    "mlflow>=2.12,<3",
    "prefect>=3.0,<4",
    "lightgbm>=4.3,<5",
    "scikit-learn>=1.4,<2",
    "loguru>=0.7,<1",
    "prometheus-client>=0.20,<1",
    "httpx>=0.27,<1",
    "pyyaml>=6.0,<7",
    "boto3>=1.34,<2",
]

[project.optional-dependencies]
benchmark = [
    "h2o>=3.46,<4",
]
dev = [
    "pytest>=8.1,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
]

[project.urls]
Homepage = "https://github.com/sherozshaikh/predictive-maintenance-platform"
Repository = "https://github.com/sherozshaikh/predictive-maintenance-platform"
Documentation = "https://github.com/sherozshaikh/predictive-maintenance-platform#readme"
"Bug Tracker" = "https://github.com/sherozshaikh/predictive-maintenance-platform/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "pipelines", "models", "features", "alerts", "monitoring", "configs", "storage"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["N806", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::FutureWarning:pandera",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "smoke: smoke tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
